fix(markdown): lists could overflow next to thumbnail

--- a/src/components/markdown/markdown.module.css
+++ b/src/components/markdown/markdown.module.css
@@ -24,6 +24,7 @@
 
 .markdown ol, .markdown ul {
   padding-left: 1em;
+  display: inline-block;
 }
 
 .embedButton {
